feat:漢堡標點擊事件

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav class="bg-white/50 shadow fixed top-0 left-0 right-0 z-20">
             <div class="mx-auto max-w-6xl px-2 sm:px-6 lg:px-8">
                 <div class="relative flex h-16 justify-between">
-                    <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
 
-                        <!-- ham dropdown menu button -->
+                    <!-- ham dropdown menu button -->
+                    <div id="hamBtn" class="absolute inset-y-0 left-0 flex items-center sm:hidden">
                         <button type="button"
                             class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-40 hover:bg-lightGray hover:text-subPurple focus:outline-none focus:ring-2 focus:ring-inset focus:ring-subPurple focus:bg-lightGray active:opacity-60"
                             aria-controls="mobile-menu" aria-expanded="false">
@@ -45,13 +45,14 @@
                             </div>
                             <div class="nav-btn flex justify-center items-center">
                                 <a href="#"
-                                    class="inline-flex items-center px-3 py-2 text-sm text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50 hover:rounded-md active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-md">Contact us</a>
+                                    class="inline-flex items-center px-3 py-2 text-sm text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50 hover:rounded-md active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-md">Contact
+                                    us</a>
                             </div>
                         </div>
                     </div>
 
                     <!-- cart icon -->
-                    <div class="flex justify-end items-center me-2">
+                    <div class="absolute top-3 right-0">
                         <button type="button"
                             class="w-10 h-10 rounded-full p-2 text-gray-800 hover:text-subPurple hover:bg-lightGray active:opacity-60 flex justify-center items-center">
                             <i class="fa-solid fa-cart-shopping"></i>
@@ -61,22 +62,23 @@
             </div>
 
             <!-- Mobile menu, show/hide based on menu state. -->
-            <!-- <div class="sm:hidden" id="mobile-menu">
-                <div class= space-y-1 pb-4 pt-2">
+            <div class="sm:hidden" id="mobile-menu">
+                <div class=space-y-1 pb-4 pt-2">
                     <a href="#"
-                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Concept</a>
+                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-800 font-medium hover:text-subPurple active:opacity-60">Concept</a>
+                    <a href="./shop.html"
+                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-800 font-medium hover:text-subPurple active:opacity-60">Shop</a>
                     <a href="#"
-                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Shop</a>
-                    <a href="#"
-                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Contact us</a>
+                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-800 font-medium hover:text-subPurple active:opacity-60">Contact
+                        us</a>
                 </div>
-            </div> -->
+            </div>
         </nav>
 
         <!-- go top btn -->
         <div class="fixed end-16 bottom-20 hidden md:block z-30">
             <a href="#"
-            class=" w-12 h-12 text-subPurple bg-lightGray hover:bg-mainYellow hover:text-subPurple rounded-full flex justify-center items-center">top</a>
+                class=" w-12 h-12 text-subPurple bg-lightGray hover:bg-mainYellow hover:text-subPurple rounded-full flex justify-center items-center">top</a>
         </div>
 
         <!-- banner -->
@@ -308,7 +310,8 @@
                     <img src="./src/img/logo.png" class="max-w-[40px] max-h-[40px]" alt="">
                     <p class="text-sm">Explore &copy;</p>
                 </div>
-                <div class="row-span-5 flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-5 text-md">
+                <div
+                    class="row-span-5 flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-5 text-md">
                     <div class="md:hidden line w-52 h-[1px] bg-lightGray"></div>
                     <a href="" class="hover:text-mainYellow">
                         <p>Concept</p>
@@ -327,6 +330,21 @@
     </footer>
 
     <script>
+        //nav 點開漢堡標選單
+        const hamBtn = document.querySelector('#hamBtn');
+        const mobileMenu = document.querySelector('#mobile-menu');
+
+        mobileMenu.style.display = 'none';
+
+        hamBtn.addEventListener('click', function () {
+            if (mobileMenu.style.display === 'none') {
+                mobileMenu.style.display = 'block';
+            } else if (mobileMenu.style.display === 'block') {
+                mobileMenu.style.display = 'none';
+            }
+        })
+
+
         // main-7 按鈕 hover 事件
         const videoBtn = document.querySelector('.videoBtn');
         videoBtn.addEventListener('mouseenter', () => {
