feat:flyout menu

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 </div>
             </div>
 
-            <!-- Mobile menu, show/hide based on menu state. -->
+            <!-- Mobile ham menu -->
             <div class="sm:hidden" id="mobile-menu">
-                <div class=space-y-1 pb-4 pt-2">
+                <div class="space-y-1 pb-4 pt-2">
                     <a href=""
                         class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-800 font-medium hover:text-subPurple active:opacity-60">Concept</a>
                     <a href="./shop.html"
